--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   padding:10px 14px;
   background:#4a90e2; color:#fff;
   border-radius:10px 10px 0 0;
-  font-weight:bold;
+  cursor:move; user-select:none; font-weight:bold;
 }
 
 #exportDlg .content {
@@ -153,7 +153,7 @@
   height: 100%;
   background: #fff;
   transition: left 0.3s ease;
-  z-index: 3000;
+  z-index: 3100;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -282,7 +282,7 @@
       cursor: pointer; transition: background 0.3s;
       z-index: 3000;
     }
-    .fab:hover { background: #a90e2; }
+    .fab:hover { background: #4a90e2; }
   }
 
   /* ===== はみ出し防止 ===== */
